#
# Copyright (c) 2023 by Delphix. All rights reserved.
#

[tool.poetry]
name = "mongo-unload-service"
version = "1.0.0"
description = "Mongo Hyperscale Compliance Unload Service"
authors = ["rohit.shende <rohit.shende@delphix.com>"]
readme = "README.md"
packages = [{include = "mongo_unload_service"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"
fastapi = "^0.97.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
fastapi-code-generator = "0.4.2"
sqlacodegen = "2.3.0"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"
pre-commit = "3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
